<resources>
    <string name="app_name">Lab_04</string>
    <string name="Name">edtName</string>
    <string name="edtEmail">E-mail</string>
    <string name="edtName">Name</string>
    <string name="etdPassword">Password</string>
    <string name="RePassword">etdRepassword</string>
    <string name="btnSubmit">Submit</string>
    <string name="ReenterPassword">Re enter Password</string>
</resources>